lots of spelling fixes

--- a/thesis-acknowledgements.tex
+++ b/thesis-acknowledgements.tex
@@ -13,12 +13,14 @@ this thesis
 vertices and edges, $\mathcal{C}$'s and queues,
 each captured by a smartphone photo at the end of a meeting.
 I couldn't have done it without you.
-I was also exceedingly lucky to have such a distiguished
+I was also exceedingly lucky to have such a distinguished
 committee --
 Tony, Max, and Lydia provided not only an extraordinary body of work
 on which to build,
 but also an array of helpful comments and suggestions which greatly
 improved this dissertation.
+
+\vspace{0.2cm}
 
 Robotics research thrives on real hardware and real applications,
 and my experiences on the CHIMP and ARM-S projects
@@ -26,9 +28,11 @@ at the NREC were pivotal to motivating and grounding my work.
 Thanks especially to Tony, Drew Bagnell,
 Clark Haynes, Mike Van de Weghe, Kyle Strabala, Jordan Brindza,
 David Stager, Eric Meyhofer, Brian Zajac, Sean Hyde,
-Jean-Sebastien Valois, Tom Galluzzo, Moslem Kazemi,
+Jean-S\'{e}bastien Valois, Tom Galluzzo, Moslem Kazemi,
 and everyone else who made those projects such a fun and rewarding
 time for me.
+
+\vspace{0.2cm}
 
 I could not have asked for a better working environment
 (or a bigger desk)
@@ -42,18 +46,20 @@ and Shushman Choudhury for your help and critical comments,
 and to Clint, Gilwoo, Laura, Rachel, Pras, Pyry, Shervin, and Stefanos,
 for being such great colleagues and friends.
 
+\vspace{0.2cm}
+
 I am eternally grateful to my parents,
 who provided boundless love and support
 -- and also very persistent encouragement
-while this disertation on lazy coloring was in the pipeline.
+while this dissertation on lazy coloring was in the pipeline.
 And to my fianc\'{e}e Anca,
 I cannot imagine
 a more compassionate critic,
 a better friend,
 or a more dedicated partner.
-Thank you for giving me your enthusiastic support,
-your insightful advice,
-and a concrete motivation to finish!
+Thank you for giving me your enthusiastic support
+and your insightful advice.
+I certainly could not have finished without you!
 
 \end{adjustwidth}
 \end{fullwidth}
