--- a/thesis-ch03-lazysp-partition.tex
+++ b/thesis-ch03-lazysp-partition.tex
@@ -58,7 +58,7 @@ For arbitrary vertices $x$ and $y$, we can write $Z'_{xy}$ as follows:
 \end{equation}
 where $S^{(k)}$ is the sum from (\ref{eqn:def})
 over only the subset of paths that traverse $e_{ab}$ exactly $k$ times.
-We note immedately that $S^{(0)} = Z_{xy}$.
+We note immediately that $S^{(0)} = Z_{xy}$.
 
 Next, we consider the sum $S^{(1)}$,
 that is, the sum over all paths which use the new edge $e_{ab}$
