--- a/thesis-ch04-ibid-proofs.tex
+++ b/thesis-ch04-ibid-proofs.tex
@@ -245,7 +245,7 @@ so $d(v) \leq d^*(v)$.
 We can replicate this logic down the path.
 As a result,
 it follows that $d(x) \leq d^*(x)$.
-But this contraducts our supposition that $d^*(x) < d(x)$,
+But this contradicts our supposition that $d^*(x) < d(x)$,
 and therefore such a vertex $x$ cannot exist.
 \end{proof}
 
