--- a/thesis-ch05-lemur-appendix.tex
+++ b/thesis-ch05-lemur-appendix.tex
@@ -20,7 +20,7 @@
       The 95\% confidence interval of the mean is also shown.
       Planners used the same parameter schedule across the problems
       as shown in Figure~\ref{fig:herbarm-schedules}.
-      The per-problem maximum acheivable mean utilities
+      The per-problem maximum achievable mean utilities
       (\ref{eqn:oracle-param-schedule})
       for each planner are shown as dotted lines.
       Planners are RRT-Connect with shortcutting, BIT*,
@@ -46,7 +46,7 @@
       The 95\% confidence interval of the mean is also shown.
       Planners used the same parameter schedule across the problems
       as shown in Figure~\ref{fig:herbarm-schedules}.
-      The per-problem maximum acheivable mean utilities
+      The per-problem maximum achievable mean utilities
       (\ref{eqn:oracle-param-schedule})
       for each planner are shown as dotted lines.
       Planners are
