--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -148,7 +148,7 @@ However,
 it can be difficult to set these parameters for a particular domain.
 
 Anytime algorithms $A_4$
-for continous
+for continuous
 \citep{karaman2011samplingoptimal, gammell2015bitstar, hauser2015lazy}
 or discrete
 \citep{likhachev2004arastar} problems
@@ -1115,7 +1115,7 @@ when executing at 1.0 rad/sec.
       RRT-Connect, BIT*, Lazy~ARA*, and LEMUR.
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ to $0.99$.
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1128,7 +1128,7 @@ when executing at 1.0 rad/sec.
       and LEMUR~(\protect\tikz{\protect\node[fill=black!90,draw=black]{};}).
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ (lower right) to $0.99$ (upper left).
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1173,7 +1173,7 @@ was learned to maximize average utility across the instances
       RRT-Connect, BIT*, Lazy~ARA*, and LEMUR.
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ to $0.99$.
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1186,7 +1186,7 @@ was learned to maximize average utility across the instances
       and LEMUR~(\protect\tikz{\protect\node[fill=black!90,draw=black]{};}).
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ (lower right) to $0.99$ (upper left).
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1210,7 +1210,7 @@ Figure~\ref{fig:lemur:sq-herb-timing}.
       RRT-Connect, BIT*, Lazy~ARA*, and LEMUR.
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ to $0.99$.
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1223,7 +1223,7 @@ Figure~\ref{fig:lemur:sq-herb-timing}.
       and LEMUR~(\protect\tikz{\protect\node[fill=black!90,draw=black]{};}).
       The LEMUR results show the effect of adjusting the $\lambda_p$
       tradeoff parameter from $0$ (lower right) to $0.99$ (upper left).
-      The results for other planners show the affect of changing the
+      The results for other planners show the effect of changing the
       total optimization time after the first returned solution.
       Also shown for reference are the contours for the
       $\lambda_U = 0.50$ utility function (i.e. 1~rad =~1~sec).
@@ -1295,7 +1295,7 @@ to exhibit good behavior on a particular robot.
 
 \cdnote{
 We could maximize expected utility
-by simply choosing estimators which are themselves expectiations.
+by simply choosing estimators which are themselves expectations.
 }
 
 \cdnote{
