--- a/thesis-ch06-family-extra.tex
+++ b/thesis-ch06-family-extra.tex
@@ -45,7 +45,7 @@ in contrast to environment checking,
 it is fundamentally quadratic in the number of moving links.
 Further, pairs of links to be checked
 tend to be relatively close to each other,
-reducing the effeciveness of broad-phase approaches.
+reducing the effectiveness of broad-phase approaches.
 
 Leven and Hutchinson \citep{leven2000changing}
 introduced the concept of a pre-cached roadmap consisting of
